// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTrades WS  1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    true,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    false,
  ],
]
`;

exports[`addTrades WS  no trade 1`] = `Array []`;

exports[`addTrades WS no tradeStatusLastUpdatedAt 1`] = `
Array [
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_1",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567892,
    },
    false,
  ],
  Array [
    Object {
      "amount": 1,
      "base": "USD",
      "id": "ID_2",
      "price": 0.05,
      "quote": "ETH",
      "source": "source",
      "timestamp": 1234567891,
    },
    false,
  ],
]
`;

exports[`already initialized 1`] = `
Object {
  "filterByTimestamp": true,
  "inflationRequired": false,
  "isLowercase": false,
  "orderBooksInterval": 2,
  "priceInversed": false,
  "quoteInversed": true,
  "separator": "",
  "supportWS": true,
  "tradesInterval": 2,
  "wsLink": "",
}
`;

exports[`fetchTrades, supportWs false 1`] = `
Array [
  Array [
    "quote-base",
  ],
]
`;

exports[`getSourcePairs  1`] = `
Array [
  "BASEQUOTE",
]
`;

exports[`getSourcePairs , not quoteInversed , isLowerCase true 1`] = `
Array [
  "basequote",
]
`;

exports[`getSourcePairs isLowerCase 1`] = `
Array [
  "quotebase",
]
`;

exports[`getSourcePairs quoteInversed 1`] = `
Array [
  "QUOTEBASE",
]
`;

exports[`getSourcePairs, assetId wrong  1`] = `Array []`;
